--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,8 +1,8 @@
 platform :ios, '9.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-target 'rntemplate' do
-  # Pods for rntemplate
+target 'rnaltagem' do
+  # Pods for rnaltagem
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -38,7 +38,7 @@ target 'rntemplate' do
     :path => “../node_modules/react-native-localization”
 
 
-  target 'rntemplateTests' do
+  target 'rnaltagemTests' do
     inherit! :search_paths
     # Pods for testing
   end
@@ -46,10 +46,10 @@ target 'rntemplate' do
   use_native_modules!
 end
 
-target 'rntemplate-tvOS' do
-  # Pods for rntemplate-tvOS
+target 'rnaltagem-tvOS' do
+  # Pods for rnaltagem-tvOS
 
-  target 'rntemplate-tvOSTests' do
+  target 'rnaltagem-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
