--- a/ios/rntemplate.xcodeproj/xcshareddata/xcschemes/rntemplate-tvOS.xcscheme
+++ b/ios/rntemplate.xcodeproj/xcshareddata/xcschemes/rntemplate-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "rntemplate-tvOS.app"
-               BlueprintName = "rntemplate-tvOS"
-               ReferencedContainer = "container:rntemplate.xcodeproj">
+               BuildableName = "rnaltagem-tvOS.app"
+               BlueprintName = "rnaltagem-tvOS"
+               ReferencedContainer = "container:rnaltagem.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "rntemplate-tvOSTests.xctest"
-               BlueprintName = "rntemplate-tvOSTests"
-               ReferencedContainer = "container:rntemplate.xcodeproj">
+               BuildableName = "rnaltagem-tvOSTests.xctest"
+               BlueprintName = "rnaltagem-tvOSTests"
+               ReferencedContainer = "container:rnaltagem.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "rntemplate-tvOSTests.xctest"
-               BlueprintName = "rntemplate-tvOSTests"
-               ReferencedContainer = "container:rntemplate.xcodeproj">
+               BuildableName = "rnaltagem-tvOSTests.xctest"
+               BlueprintName = "rnaltagem-tvOSTests"
+               ReferencedContainer = "container:rnaltagem.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "rntemplate-tvOS.app"
-            BlueprintName = "rntemplate-tvOS"
-            ReferencedContainer = "container:rntemplate.xcodeproj">
+            BuildableName = "rnaltagem-tvOS.app"
+            BlueprintName = "rnaltagem-tvOS"
+            ReferencedContainer = "container:rnaltagem.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "rntemplate-tvOS.app"
-            BlueprintName = "rntemplate-tvOS"
-            ReferencedContainer = "container:rntemplate.xcodeproj">
+            BuildableName = "rnaltagem-tvOS.app"
+            BlueprintName = "rnaltagem-tvOS"
+            ReferencedContainer = "container:rnaltagem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "rntemplate-tvOS.app"
-            BlueprintName = "rntemplate-tvOS"
-            ReferencedContainer = "container:rntemplate.xcodeproj">
+            BuildableName = "rnaltagem-tvOS.app"
+            BlueprintName = "rnaltagem-tvOS"
+            ReferencedContainer = "container:rnaltagem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
