--- a/ios/rntemplate.xcodeproj/xcshareddata/xcschemes/rntemplate.xcscheme
+++ b/ios/rntemplate.xcodeproj/xcshareddata/xcschemes/rntemplate.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "rntemplate.app"
-               BlueprintName = "rntemplate"
-               ReferencedContainer = "container:rntemplate.xcodeproj">
+               BuildableName = "rnaltagem.app"
+               BlueprintName = "rnaltagem"
+               ReferencedContainer = "container:rnaltagem.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "rntemplateTests.xctest"
-               BlueprintName = "rntemplateTests"
-               ReferencedContainer = "container:rntemplate.xcodeproj">
+               BuildableName = "rnaltagemTests.xctest"
+               BlueprintName = "rnaltagemTests"
+               ReferencedContainer = "container:rnaltagem.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "rntemplateTests.xctest"
-               BlueprintName = "rntemplateTests"
-               ReferencedContainer = "container:rntemplate.xcodeproj">
+               BuildableName = "rnaltagemTests.xctest"
+               BlueprintName = "rnaltagemTests"
+               ReferencedContainer = "container:rnaltagem.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rntemplate.app"
-            BlueprintName = "rntemplate"
-            ReferencedContainer = "container:rntemplate.xcodeproj">
+            BuildableName = "rnaltagem.app"
+            BlueprintName = "rnaltagem"
+            ReferencedContainer = "container:rnaltagem.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rntemplate.app"
-            BlueprintName = "rntemplate"
-            ReferencedContainer = "container:rntemplate.xcodeproj">
+            BuildableName = "rnaltagem.app"
+            BlueprintName = "rnaltagem"
+            ReferencedContainer = "container:rnaltagem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "rntemplate.app"
-            BlueprintName = "rntemplate"
-            ReferencedContainer = "container:rntemplate.xcodeproj">
+            BuildableName = "rnaltagem.app"
+            BlueprintName = "rnaltagem"
+            ReferencedContainer = "container:rnaltagem.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
