--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "react-devtools": "^3.6.3",
     "react-native": "0.61.2",
     "react-native-autocomplete-input": "^4.1.0",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^0.2.0",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-localization": "^2.1.1",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.2.0",
+    "react-native-shadow-cards": "^1.0.2",
     "react-redux": "^7.1.0",
     "redux": "^4.0.1",
     "redux-persist": "^6.0.0",
